@@ -7,8 +7,8 @@ import org.w3c.dom.Element;
 
 import java.io.*;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
-import java.security.AccessControlException;
 import java.util.Objects;
 
 /**
@@ -24,9 +24,6 @@ import java.util.Objects;
  * @author Bela Ban
  */
 public class ConfiguratorFactory {
-    public static final String JAXP_MISSING_ERROR_MSG="the required XML parsing classes are not available; " +
-      "make sure that JAXP compatible libraries are in the classpath.";
-
 
     protected ConfiguratorFactory() {
     }
@@ -39,7 +36,6 @@ public class ConfiguratorFactory {
      * @throws Exception if problems occur during the configuration of the protocol stack.
      */
     public static ProtocolStackConfigurator getStackConfigurator(File file) throws Exception {
-        checkJAXPAvailability();
         InputStream input=getConfigStream(file);
         return XmlConfigurator.getInstance(input);
     }
@@ -47,7 +43,6 @@ public class ConfiguratorFactory {
     public static ProtocolStackConfigurator getStackConfigurator(InputStream input) throws Exception {
         return XmlConfigurator.getInstance(input);
     }
-
 
     /**
      * Returns a protocol stack configurator based on the provided properties string.
@@ -67,13 +62,9 @@ public class ConfiguratorFactory {
         throw new IllegalStateException(String.format("configuration %s not found or invalid", properties));
     }
 
-
-
     public static InputStream getConfigStream(File file) throws Exception {
         return new FileInputStream(Objects.requireNonNull(file));
     }
-
-
 
     /**
      * Returns a JGroups XML configuration InputStream based on the provided properties string.
@@ -90,16 +81,16 @@ public class ConfiguratorFactory {
         try {
             configStream=new FileInputStream(properties);
         }
-        catch(FileNotFoundException | AccessControlException fnfe) {
+        catch(FileNotFoundException fnfe) {
             // the properties string is likely not a file
         }
 
         // Check to see if the properties string is a URL.
         if(configStream == null) {
             try {
-                configStream=new URL(properties).openStream();
+                configStream=URI.create(properties).toURL().openStream();
             }
-            catch (MalformedURLException mre) {
+            catch (IllegalArgumentException | MalformedURLException mre) {
                 // the properties string is not a URL
             }
         }
@@ -109,7 +100,6 @@ public class ConfiguratorFactory {
             configStream=Util.getResourceAsStream(properties, ConfiguratorFactory.class);
         return configStream;
     }
-
 
     public static InputStream getConfigStream(Object properties) throws IOException {
         InputStream input=null;
@@ -149,9 +139,6 @@ public class ConfiguratorFactory {
         return new ByteArrayInputStream(((String)properties).getBytes());
     }
 
-
-
-
     /**
      * Returns an XmlConfigurator based on the provided properties string (if possible).
      *
@@ -164,34 +151,14 @@ public class ConfiguratorFactory {
      *                      JGroups XML configuration pointed to by the URL can not be parsed.
      */
     static XmlConfigurator getXmlConfigurator(String properties) throws IOException {
-        XmlConfigurator returnValue=null;
-        InputStream configStream=getConfigStream(properties);
-        if(configStream == null && properties.endsWith("xml"))
-            throw new FileNotFoundException(String.format(Util.getMessage("FileNotFound"), properties));
+        try(InputStream configStream=getConfigStream(properties)) {
+            if(configStream == null && properties.endsWith("xml"))
+                throw new FileNotFoundException(String.format(Util.getMessage("FileNotFound"), properties));
 
-        if (configStream != null) {
-            checkJAXPAvailability();
-            returnValue=XmlConfigurator.getInstance(configStream);
+            if(configStream != null)
+                return XmlConfigurator.getInstance(configStream);
         }
-
-        return returnValue;
-    }
-
-
-
-    /**
-     * Checks the availability of the JAXP classes on the classpath.
-     * @throws NoClassDefFoundError if the required JAXP classes are not availabile on the classpath.
-     */
-    static void checkJAXPAvailability() {
-        try {
-            XmlConfigurator.class.getName();
-        }
-        catch (NoClassDefFoundError error) {
-            Error tmp=new NoClassDefFoundError(JAXP_MISSING_ERROR_MSG);
-            tmp.initCause(error);
-            throw tmp;
-        }
+        return null;
     }
 
 }
